sorted index.html about section and dealt with alignment issues for all platforms

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,10 +205,6 @@ footer {
     margin-bottom: 50px;
 }
 
-#band-info-mobile {
-    display: none;
-}
-
 #band-info-tablet {
     display: none;
 }
@@ -391,8 +387,12 @@ footer {
     margin-right: 5px;
 }
 
-#band-info-mobile {
+#band-info-desktop {
     display: none;
+}
+
+#band-info-tablet {
+    display: inherit;
 }
 
 #about-the-band-small {
@@ -400,8 +400,13 @@ footer {
 
 #small-band-photo {
     min-width: 400px;
-    float: center;
+    margin-bottom: 50px;
 }
+
+.about-the-band-home-header {
+    margin-top: 50px;
+}
+
 
 .about-the-band-jumbo {
     padding-top: 0px;
